--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -1,8 +1,9 @@
 ﻿@page "/print"
-@inject Data.PrintingService PrintManager
-@inject Data.PrinterDataServiceTest PrinterDataHandler
+@inject PrintingService PrintManager
+@inject PrinterDataServiceTest PrinterDataHandler
 @inject NavigationManager MyNavigationManager
-@inject Data.BackgroundTimer background
+@inject BackgroundTimer background
+@inject PortConnectionManagerService PortManager
 @inject Data.BedLevelingService levelBed
 
 @inject ISnackbar Snackbar
@@ -29,7 +30,7 @@
         <!-- Container for controlling print operations -->
         <ContainerSpaceBetween>
             <!-- Button to start printing -->
-            @if (PrintManager._isPrinting)
+            @if (PrintManager.isPrinting)
             {
                 <MudButton Disabled="true" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="PrintManager.ConfirmStartAsync">Start</MudButton>
             }
@@ -118,7 +119,7 @@
             </MudSelect>
         }
 
-        @if (background.ConnectionServiceSerial.IsConnected)
+        @if (PortManager.connection.ConnectionServiceSerial.IsConnected)
         {
             <MudSelect @bind-Value="@PrintManager.fileToPrint" T="string" Label="SD Files" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
 
@@ -165,7 +166,7 @@
                 <MudText>File Size:</MudText>
                 <MudText><strong>@Math.Round(PrintManager.printJob.ConvertToMB(PrintManager.printJob.FileSize), 2)MB</strong></MudText>
             </ContainerSpaceBetween>
-            @if (PrintManager._isPrinting)
+            @if (PrintManager.isPrinting)
             {
                 <ContainerSpaceBetween>
                     <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="PrintManager.progress" Class="pb-9">
@@ -371,12 +372,12 @@
             <!-- Grid item containing the Calibrate Bed button -->
             <MudItem xs="12" sm="12" md="12" lg="12" Class="pt-0 mt-0">
                 <!-- Check if printing is not in progress -->
-                @if (!PrintManager._isPrinting)
+                @if (!PrintManager.isPrinting)
                 {
                     <!-- Button to initiate bed calibration -->
-                    <MudButton FullWidth="true" Disabled="@PrintManager._processing" OnClick="PrintManager.CalibrateBed" Variant="Variant.Filled" Color="Color.Tertiary">
+                    <MudButton FullWidth="true" Disabled="@PrintManager.processing" OnClick="PrintManager.CalibrateBed" Variant="Variant.Filled" Color="Color.Tertiary">
                         <!-- Show a progress indicator and text when processing -->
-                        @if (PrintManager._processing)
+                        @if (PrintManager.processing)
                         {
                             <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
                             <MudText Class="ms-2">Measuring Bed</MudText>
@@ -426,13 +427,13 @@
     protected override void OnInitialized()
     {
         // Subscribe to the background service events
-        background.MessageReceived += OnUpdate;
+        // background.MessageReceived += OnUpdate;
         background.SecondElapsed += OnSecondElapsed;
 
         // Check if the serial connection is established and request SD card list if connected
-        if (background.ConnectionServiceSerial.IsConnected)
+        if (PortManager.connection.ConnectionServiceSerial.IsConnected)
         {
-            background.ConnectionServiceSerial.Write(CommandMethods.BuildListSDCardCommand());
+            PortManager.connection.ConnectionServiceSerial.Write(CommandMethods.BuildListSDCardCommand());
         }
 
         // Initialize the configuration for Plotly chart
@@ -491,6 +492,14 @@
 
                 // Load Plotly data if available
                 LoadPlotlyData();
+                if (PortManager.connections != null)
+                {
+                    foreach (var port in PortManager.connections.Values)
+                    {
+                        port.InputReceived += OnUpdate;
+                    }
+                }
+
             });
         }
     }
@@ -499,50 +508,52 @@
     /// Handles updates from the printer.
     /// </summary>
     /// <param name="message">The message received from the printer.</param>
-    public async void OnUpdate(string message)
+    public async void OnUpdate(string message, SerialDataProcessorService source)
     {
-
-        // get the list of files on the SD card
-        fileMessage += message;
-        if (message.Contains("End"))
+        if(PortManager.SelectPrinterString == source.ConnectionServiceSerial.portName)
         {
-            sdFiles = string.Join("\n", fileMessage.Split('\n').Where(line => !string.IsNullOrWhiteSpace(line)));
-            PrintManager.ListSDFiles(sdFiles);
-            fileMessage = "";
-        }
-
-        // update elapsed print time
-        // print.ElapsedPrintTime(message);
-
-        // get the bed leveling data
-        if (fileMessage.Contains("Bilinear"))
-        {
-            calibrateMessage += message;
-            if (message.Contains("X:"))
+            // get the list of files on the SD card
+            fileMessage += message;
+            if (message.Contains("End"))
             {
-                PrinterDataHandler.BedLevelDataService.CSVData = "";
-                PrinterDataHandler.BedLevelDataService.CSVData = PrinterDataHandler.BedLevelDataService.bedData.GetGrid(calibrateMessage);
-                PrinterDataHandler.BedLevelDataService.meshData = PrinterDataHandler.BedLevelDataService.GetSurfaceData();
-                PrintManager._processing = false;
+                sdFiles = string.Join("\n", fileMessage.Split('\n').Where(line => !string.IsNullOrWhiteSpace(line)));
+                PrintManager.ListSDFiles(sdFiles);
                 fileMessage = "";
-                calibrateMessage = "";
-
-                // delete previous bed leveling data if it exists
-                if (File.Exists("meshData.json"))
-                {
-                    File.Delete("meshData.json");
-                }
-                // save the new bed leveling data
-                PrinterDataHandler.SavePrinterData("meshData.json", PrinterDataHandler.BedLevelDataService.CSVData);
-                LoadPlotlyData();
-                MyNavigationManager.NavigateTo("/print", true);
             }
+
+            // update elapsed print time
+            // print.ElapsedPrintTime(message);
+
+            // get the bed leveling data
+            if (fileMessage.Contains("Bilinear"))
+            {
+                calibrateMessage += message;
+                if (message.Contains("X:"))
+                {
+                    PrinterDataHandler.BedLevelDataService.CSVData = "";
+                    PrinterDataHandler.BedLevelDataService.CSVData = PrinterDataHandler.BedLevelDataService.bedData.GetGrid(calibrateMessage);
+                    PrinterDataHandler.BedLevelDataService.meshData = PrinterDataHandler.BedLevelDataService.GetSurfaceData();
+                    PrintManager.processing = false;
+                    fileMessage = "";
+                    calibrateMessage = "";
+
+                    // delete previous bed leveling data if it exists
+                    if (File.Exists("meshData.json"))
+                    {
+                        File.Delete("meshData.json");
+                    }
+                    // save the new bed leveling data
+                    PrinterDataHandler.SavePrinterData("meshData.json", PrinterDataHandler.BedLevelDataService.CSVData);
+                    LoadPlotlyData();
+                    MyNavigationManager.NavigateTo("/print", true);
+                }
+            }
+            // parse the current hotend and bed temperatures
+            await PrinterDataHandler.HotendTemperatureService.ParseCurrentHotendTemperature(message);
+            await PrinterDataHandler.BedTemperatureService.ParseCurrentBedTemperature(message);
+            await PromptHandler(message);
+            await InvokeAsync(StateHasChanged);
         }
-        // parse the current hotend and bed temperatures
-        await PrinterDataHandler.HotendTemperatureService.ParseCurrentHotendTemperature(message);
-        await PrinterDataHandler.BedTemperatureService.ParseCurrentBedTemperature(message);
-        await PromptHandler(message);
-        await InvokeAsync(StateHasChanged);
     }
 
     /// <summary>
@@ -551,14 +562,14 @@
     private void OnSecondElapsed()
     {
         // Check if the connection to the serial device is established
-        if (background.ConnectionServiceSerial.IsConnected)
-        {
+        // if (PortManager.connections[PortManager.SelectPrinterString].ConnectionServiceSerial.IsConnected)
+        // {
             Task.Run(async () =>
             {
                 // If automatic temperature reporting is not enabled, request temperature data
                 if (!PrinterDataHandler.Printer.HasAutoReportTemperature)
                 {
-                    background.ConnectionServiceSerial.Write(CommandMethods.BuildReportTemperaturesCommand());
+                    PortManager.connection.ConnectionServiceSerial.Write(CommandMethods.BuildReportTemperaturesCommand());
                 }
 
                 // Ensure the graph data does not exceed 30 entries by removing the oldest entries
@@ -566,7 +577,6 @@
                 {
                     Data.PrintingService.hotendGraph.RemoveAt(0);
                     Data.PrintingService.bedGraph.RemoveAt(0);
-
                 }
 
                 // Add the current temperature data to the graph
@@ -580,7 +590,7 @@
                 await Task.Run(() => PrintManager.GetDrives());
 
                 // If printing is in progress, request print time elapsed
-                if (PrintManager._isPrinting)
+                if (PrintManager.isPrinting)
                 {
                     // background.ConnectionServiceSerial.Write("M31");
                     await PrintManager.DisplayEstimatedTimeRemaining();
@@ -588,9 +598,8 @@
                 _isPrimaryColor = !_isPrimaryColor; // Toggle the color state
 
                 await InvokeAsync(StateHasChanged);
-
             });
-        }
+        // }
     }
 
     /// <summary>
@@ -654,7 +663,7 @@
 
                 if (result == true)
                 {
-                    background.ConnectionServiceSerial.Write("M876 S1");
+                    PortManager.connection.ConnectionServiceSerial.Write("M876 S1");
                 }
             }
 
@@ -667,7 +676,7 @@
 
                 if (result == true)
                 {
-                    background.ConnectionServiceSerial.Write("M876 S1");
+                    PortManager.connection.ConnectionServiceSerial.Write("M876 S1");
                 }
             }
 
@@ -680,7 +689,7 @@
 
                 if (result == true)
                 {
-                    background.ConnectionServiceSerial.Write("M876 S1");
+                    PortManager.connection.ConnectionServiceSerial.Write("M876 S1");
                 }
             }
 
@@ -693,11 +702,11 @@
 
                 if (result == true)
                 {
-                    background.ConnectionServiceSerial.Write("M876 S1");
+                    PortManager.connection.ConnectionServiceSerial.Write("M876 S1");
                 }
                 else
                 {
-                    background.ConnectionServiceSerial.Write("M876 S0");
+                    PortManager.connection.ConnectionServiceSerial.Write("M876 S0");
                     PrintManager._snackbar.Add("Purging", Severity.Info);
                 }
             }
@@ -707,7 +716,15 @@
 
     public void Dispose()
     {
-        background.MessageReceived -= OnUpdate;
+        // background.MessageReceived -= OnUpdate;
+        if (PortManager.connections != null)
+        {
+            foreach (var port in PortManager.connections.Values)
+            {
+                port.InputReceived -= OnUpdate;
+            }
+        }
         background.SecondElapsed -= OnSecondElapsed;
+
     }
 }
