--- a/WebUIBlazor/Pages/PrinterState.razor
+++ b/WebUIBlazor/Pages/PrinterState.razor
@@ -3,27 +3,35 @@
 @inject Data.PrinterDataServiceTest PrintHandler
 @inject Data.BackgroundTimer background
 @inject Data.PrintingService printingService
+@inject PortConnectionManagerService PortManager
 
-@if (background.ConnectionServiceSerial.printerConnection.IsConnected)
+@if (PortManager.SelectPrinterString != String.Empty)
 {
-    if (printingService._isPrinting)
+    @if (PortManager.connections[PortManager.SelectPrinterString].IsConnected)
     {
-        <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
-            <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-                <b>Printing: @printingService.progress %</b>
-            </MudText>
-        </MudProgressLinear>
-    }
-    @*         <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!background.IsBusy ? Severity.Success :  Severity.Warning)" Variant="Variant.Text">
+        if (printingService.isPrinting)
+        {
+            <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
+                <MudText Typo="Typo.subtitle1" Color="Color.Surface">
+                    <b>Printing: @printingService.progress %</b>
+                </MudText>
+            </MudProgressLinear>
+        }
+        @*         <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!background.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
             @if (background.IsBusy)
             {
                 <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
             }
             @(new MarkupString(!background.IsBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
         </MudAlert> *@
-
+    }
+@*     <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
+        <MudText Typo="Typo.subtitle1" Color="Color.Surface">
+            <b>Printing: @printingService.progress %</b>
+        </MudText>
+    </MudProgressLinear> *@
     <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
-        <MudText Typo="Typo.h6" Color="Color.Primary">@background.Notification</MudText>
+        <MudText Typo="Typo.h6" Color="Color.Primary">@PortManager.connection.Notification</MudText>
     </MudAlert>
 }
 
@@ -32,7 +40,10 @@
     protected override void OnInitialized()
     {
         background.BusyStatusChanged += OnBusyChanged;
-        background.MessageReceived += OnMessageReceived;
+        foreach(var bs in PortManager.connections.Values)
+        {
+            bs.InputReceived += OnMessageReceived;
+        }
     }
 
     public void OnBusyChanged()
@@ -43,9 +54,15 @@
         });
     }
 
-    public void OnMessageReceived(string message)
+    public void OnMessageReceived(string message, SerialDataProcessorService source)
     {
-        printingService.UpdatePrintProgress(message);
+        
+        if (PortManager.SelectPrinterString == source.ConnectionServiceSerial.portName)
+        {
+            printingService.UpdatePrintProgress(message);
+            // Console.WriteLine($"Hi from {source.ConnectionServiceSerial.portName}");
+        }
+
         InvokeAsync(StateHasChanged);
     }
 
@@ -53,6 +70,9 @@
     public void Dispose()
     {
         background.BusyStatusChanged -= OnBusyChanged;
-        background.MessageReceived -= OnMessageReceived;
+        foreach (var bs in PortManager.connections.Values)
+        {
+            bs.InputReceived -= OnMessageReceived;
+        }
     }
 }
