--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -4,8 +4,7 @@
 @using MachineControlHub.Motion
 @inject PrinterDataServiceTest printer
 @inject PortConnectionManagerService PortManager
-
-
+@inject NavigationManager MyNavigationManager
 
 @* <MudCard>
     <MudCardHeader>
@@ -963,18 +962,54 @@
         {
             foreach (var port in PortManager.connections.Values)
             {
+                port.InputReceived += OnUpdate;
+            }
+            PortManager.SelectedPrinterChanged += OnSelectedPrinter;
+        }
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            if (PortManager.connections != null && PortManager.connections.Count > 0)
+            {
                 printer.GetPrinterSettings();
                 printer.GetFirmwareSettings();
-                port.InputReceived += OnUpdate;
-                // port.InputReceived += OnSecondElapsed;
+                PortManager.connections[PortManager.SelectedPrinter].ConnectionServiceSerial.Write("M211");
             }
         }
     }
 
     public async void OnUpdate(string message, SerialDataProcessorService source)
     {
-        printer.OnUpdateSettings(message,source);
+        printer.OnUpdateSettings(message, source);
         await InvokeAsync(StateHasChanged);
     }
-}
 
+    public async void OnSelectedPrinter(object sender, EventArgs e)
+    {
+        try
+        {
+            await InvokeAsync(() => MyNavigationManager.NavigateTo(MyNavigationManager.Uri, true));
+        }
+        catch (NavigationException navEx)
+        {
+            Console.WriteLine($"Navigation error: {navEx.Message}");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Unexpected error: {ex.Message}");
+        }
+    }
+
+    public void Dispose()
+    {
+        foreach (var port in PortManager.connections.Values)
+        {
+            port.InputReceived -= OnUpdate;
+        }
+        PortManager.SelectedPrinterChanged -= OnSelectedPrinter;
+    }
+
+}
