--- a/WebUIBlazor/Pages/PrinterState.razor
+++ b/WebUIBlazor/Pages/PrinterState.razor
@@ -5,71 +5,55 @@
 @inject Data.PrintingService printingService
 @inject PortConnectionManagerService PortManager
 
-@if (PortManager.SelectPrinterString != String.Empty)
+@if (PortManager.SelectedPrinter != String.Empty)
 {
-    @if (PortManager.connections[PortManager.SelectPrinterString].IsConnected)
+    if (printingService.isPrinting)
     {
-        if (printingService.isPrinting)
-        {
-            <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
-                <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-                    <b>Printing: @printingService.progress %</b>
-                </MudText>
-            </MudProgressLinear>
-        }
-        @*         <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!background.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
+        <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
+            <MudText Typo="Typo.subtitle1" Color="Color.Surface">
+                <b>Printing: @printingService.progress %</b>
+            </MudText>
+        </MudProgressLinear>
+    }
+
+    <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
+        <MudText Typo="Typo.h6" Color="Color.Primary">@PortManager.connection.Notification</MudText>
+    </MudAlert>
+
+    @*         <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!background.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
             @if (background.IsBusy)
             {
                 <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
             }
             @(new MarkupString(!background.IsBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
         </MudAlert> *@
-    }
-@*     <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
+
+    @*     <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="printingService.progress" Class="pb-9">
         <MudText Typo="Typo.subtitle1" Color="Color.Surface">
             <b>Printing: @printingService.progress %</b>
         </MudText>
     </MudProgressLinear> *@
-    <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
-        <MudText Typo="Typo.h6" Color="Color.Primary">@PortManager.connection.Notification</MudText>
-    </MudAlert>
 }
 
 @code {
 
     protected override void OnInitialized()
     {
-        background.BusyStatusChanged += OnBusyChanged;
-        foreach(var bs in PortManager.connections.Values)
+        foreach (var bs in PortManager.connections.Values)
         {
             bs.InputReceived += OnMessageReceived;
         }
     }
 
-    public void OnBusyChanged()
-    {
-        Task.Run(() =>
-        {
-            InvokeAsync(StateHasChanged);
-        });
-    }
-
     public void OnMessageReceived(string message, SerialDataProcessorService source)
     {
-        
-        if (PortManager.SelectPrinterString == source.ConnectionServiceSerial.portName)
-        {
-            printingService.UpdatePrintProgress(message);
-            // Console.WriteLine($"Hi from {source.ConnectionServiceSerial.portName}");
-        }
-
+        printingService.UpdatePrintProgress(message);
         InvokeAsync(StateHasChanged);
     }
 
 
     public void Dispose()
     {
-        background.BusyStatusChanged -= OnBusyChanged;
         foreach (var bs in PortManager.connections.Values)
         {
             bs.InputReceived -= OnMessageReceived;
