--- a/WebUIBlazor/Shared/MainLayout.razor
+++ b/WebUIBlazor/Shared/MainLayout.razor
@@ -11,6 +11,8 @@
     <MudAppBar Elevation="1" Dense="true" Style="height:50px;">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
+        <WebUI.Pages.Connection/>
+        <WebUI.Pages.ConnectionStatus/>
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/milemihailov/MachineControlHub" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" Href="https://www.linkedin.com/in/mile-mihailov-334a15222/" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.Discord" Color="Color.Inherit" Href="" Target="_blank" />
